@@ -1777,6 +1777,13 @@ Thu Apr 22 14:13:57 CEST 2004
 Thu Apr 29 16:06:37 CEST 2004
 
 	- Synced parser and keyword list.
+	
+Wed May  5 11:51:47 CEST 2004
+
+	- Fixed bug in adjust_informix that treated arrays as simple
+	  variables.
+	- Synced parser again.
+	- Synced lexer.
 	- Set pgtypes library version to 1.2.
 	- Set ecpg version to 3.2.0.
 	- Set compat library version to 1.2.
